--- a/todo-list-vue/package.json
+++ b/todo-list-vue/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "echarts": "^6.0.0",
     "element-plus": "^2.13.0",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
